@@ -57,6 +57,11 @@ class P4A_Button extends P4A_Widget
 	 * @var boolean
 	 */
 	protected $_label_visible = false;
+	
+	/**
+	 * @var string
+	 */
+	protected $_tooltip = null;
 
 	/**
 	 * @param string $name Mnemonic identifier for the object
@@ -119,6 +124,24 @@ class P4A_Button extends P4A_Widget
 		$this->_label_visible = $visible;
 		return parent::setLabel($label);
 	}
+	
+	/**
+	 * @param string $text
+	 * @return P4A_Label
+	 */
+	public function setTooltip($text)
+	{
+		$this->_tooltip = $text;
+		return $this;
+	}
+
+	/**
+	 * @return string
+	 */
+	function getTooltip()
+	{
+		return $this->_tooltip;
+	}
 
 	/**
 	 * Retuns the HTML rendered button
@@ -168,7 +191,14 @@ class P4A_Button extends P4A_Widget
 			$class = $this->composeStringClass($class);
 		}
 		
-		return "<button id='$id' title='$title' $class $properties $actions>" . 
+		$tooltip_text = __($this->getTooltip());
+		if ($tooltip_text) {
+			$tooltip_text = "<div id='{$id}tooltip' class='p4a_tooltip'><div class='p4a_tooltip_inner'>$tooltip_text</div></div>";
+			$actions .= " onmouseover='p4a_tooltip_show(this)' ";
+		}
+		
+		return "<button id='$id' title='$title' $class $properties $actions>" .
+		 		$tooltip_text .
 				P4A_Generate_Widget_Layout_Table($icon, $label) . '</button>';
 	}
 }
