@@ -1,5 +1,6 @@
 3.2.2
 - P4A_Table's image cols are now centered horizontally
+- P4A_Button::setTooltip() and getTooltip() methods were added
 
 3.2.1
 - Zend Framework was updated to 1.7.4
